syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "KubeChat.Agones.Services";

service Agones {
	rpc GetGameServers (google.protobuf.Empty) returns (stream GameServerChange);
	rpc AllocateGameServer (AllocateGameServerRequest) returns (AllocateGameServerResponse);
	rpc DeleteGameServer (DeleteGameServerRequest) returns (google.protobuf.Empty);
}

message GameServerChange {
	enum ChangeType {
		Added = 0;
		Removed = 1;
	}
	ChangeType Change = 1;

	message GameServerAddress {
		message Port {
			string Name = 1;
			int32 Number = 2;
		}

		string Name = 1;
		string Address = 2;
		map<string, Port> Ports = 3;
	}
	GameServerAddress GameServer = 2;
}

message AllocateGameServerRequest {
	string RequestedName = 1;
}

message AllocateGameServerResponse {
	string GameServerName = 1;
}

message DeleteGameServerRequest {
	string GameServerName = 1;
}